--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
 version: '3.8'
 
+x-app-common: &app-common
+  image: climate-app:latest
+  env_file:
+    - .env.docker
+  environment:
+    PYTHONPATH: /app
+  volumes:
+    - ./:/app
+    - ./data_raw:/data_raw
+    - ./data_processed:/data_processed
+  networks:
+    - climate
+
 services:
   # --- DATABASE ---
   postgres:
@@ -22,27 +35,12 @@ services:
     container_name: climate_pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@local
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
       PGADMIN_DEFAULT_PASSWORD: admin
     ports:
       - "5055:80"
     depends_on:
       - postgres
-    networks:
-      - climate
-
-  # --- JUPYTER ---
-  jupyter:
-    image: jupyter/base-notebook:latest
-    container_name: climate_jupyter
-    restart: unless-stopped
-    ports:
-      - "8888:8888"
-    volumes:
-      - ./notebooks:/home/jovyan/work
-      - ./data_raw:/data_raw
-    command: >
-      start-notebook.sh --NotebookApp.token=''
     networks:
       - climate
 
@@ -57,69 +55,95 @@ services:
     networks:
       - climate
 
+  # --- APP / UTILS ---
+  app:
+    <<: *app-common
+    build: .
+    container_name: climate_app
+    restart: unless-stopped
+    command: ["tail", "-f", "/dev/null"]
+    depends_on:
+      - postgres
+      - prefect-server
+
   # PREFECT AGENT
   prefect-agent:
-    image: prefecthq/prefect:2-latest
+    <<: *app-common
     container_name: climate_prefect_agent
     restart: unless-stopped
     depends_on:
       - prefect-server
       - postgres
-    command: ["prefect", "agent", "start", "-q", "default"]
-    volumes:
-      - ./data_raw:/data_raw
-    networks:
-      - climate
+    command: ["prefect", "agent", "start", "-q", "${PREFECT_FLOW_QUEUE:-default}"]
 
   # --- DASK ---
   dask-scheduler:
-    image: daskdev/dask:latest
+    <<: *app-common
     container_name: climate_dask_scheduler
     restart: unless-stopped
-    command: dask-scheduler
+    command: ["dask-scheduler"]
     ports:
       - "8786:8786"
       - "8787:8787"
-    volumes:
-      - ./data_raw:/data_raw
-    networks:
-      - climate
 
   dask-worker-1:
-    image: daskdev/dask:latest
+    <<: *app-common
     container_name: climate_dask_worker_1
     restart: unless-stopped
     depends_on:
       - dask-scheduler
-    command: dask-worker tcp://dask-scheduler:8786 --memory-limit=2GB --nthreads=2
-    volumes:
-      - ./data_raw:/data_raw
-    networks:
-      - climate
+    command: ["dask-worker", "tcp://dask-scheduler:8786", "--memory-limit=2GB", "--nthreads=2"]
 
   dask-worker-2:
-    image: daskdev/dask:latest
+    <<: *app-common
     container_name: climate_dask_worker_2
     restart: unless-stopped
     depends_on:
       - dask-scheduler
-    command: dask-worker tcp://dask-scheduler:8786 --memory-limit=2GB --nthreads=2
-    volumes:
-      - ./data_raw:/data_raw
-    networks:
-      - climate
+    command: ["dask-worker", "tcp://dask-scheduler:8786", "--memory-limit=2GB", "--nthreads=2"]
 
   dask-worker-3:
-    image: daskdev/dask:latest
+    <<: *app-common
     container_name: climate_dask_worker_3
     restart: unless-stopped
     depends_on:
       - dask-scheduler
-    command: dask-worker tcp://dask-scheduler:8786 --memory-limit=2GB --nthreads=2
-    volumes:
-      - ./data_raw:/data_raw
-    networks:
-      - climate
+    command: ["dask-worker", "tcp://dask-scheduler:8786", "--memory-limit=2GB", "--nthreads=2"]
+
+  # --- STREAMLIT ---
+  streamlit:
+    <<: *app-common
+    container_name: climate_streamlit
+    restart: unless-stopped
+    depends_on:
+      - postgres
+    command:
+      [
+        "streamlit",
+        "run",
+        "dashboards/streamlit_dashboard.py",
+        "--server.port=8501",
+        "--server.address=0.0.0.0",
+      ]
+    ports:
+      - "8501:8501"
+
+  # --- JUPYTER ---
+  jupyter:
+    <<: *app-common
+    container_name: climate_jupyter
+    restart: unless-stopped
+    command:
+      [
+        "jupyter",
+        "lab",
+        "--ip=0.0.0.0",
+        "--port=8888",
+        "--no-browser",
+        "--NotebookApp.token=",
+      ]
+    ports:
+      - "8888:8888"
 
 # --- VOLUMES ---
 volumes:
