--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas==2.3.3
+pandas==2.1.4
 numpy==1.26.4
-dask[dataframe]==2025.11.0
+dask[distributed,dataframe]==2023.9.3
 prefect==2.20.16
+pydantic==2.8.2
 sqlalchemy==2.0.35
 psycopg2-binary==2.9.8
 jupyter==1.0.0
@@ -9,3 +10,5 @@ matplotlib==3.8.0
 seaborn==0.13.2
 flake8==7.1.0
 pytest==8.3.2
+streamlit==1.38.0
+plotly==5.24.1
